<resources>
    <string name="app_name">MyAura</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="log_in_with_fb">Login with facebook</string>
    <string name="or">or</string>
    <string name="customer">Customer</string>
    <string name="business">Business</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="have_an_account">Have an account?<u>Login</u></string>
    <string name="title_activity_sign_up_profile">Profile</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="street_address">Street Address</string>
    <string-array name="city">
        <item>Chandigarh</item>
        <item>Mohali</item>
    </string-array>
    <string-array name="state">
        <item>Chandigarh</item>
        <item>Mohali</item>
    </string-array>
    <string name="phone_number">Phone Number</string>
    <string name="create_account">Create Account</string>
    <string name="customer_detail">Customer Detail</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="find_services">Find Services</string>
    <string name="requested_quotoes">Requested Quote</string>
    <string name="track_service">Track Services</string>
    <string name="promo_code">Promo Code</string>
    <string name="share">Share</string>
    <string name="about">About</string>
    <string name="switch_business">SWITCH TO BUSINESS</string>
    <string name="request_quotoe">Request Quote</string>
    <string name="business_name">Business Name</string>
    <string name="view_detail">View Detail</string>
    <string name="available_now">Available Now</string>
    <string name="desc">A hedge fund uses a range of investment techniques and invests in a wide array of assets to generate a higher return for a given level of risk than what\'s expected of normal investments. In many cases, hedge funds are managed to generate a consistent level of return, regardless of what the market does.</string>
    <string name="work_images">Work Images</string>
    <string name="select">select</string>
    <string name="show_less">show less</string>
    <string name="saved_request">Saved Requests</string>
    <string name="description">Description</string>
    <string name="desc_hint">Enter a description of the task that you want and any additional details.</string>
    <string name="enter_location">Enter Location</string>
    <string name="add_image">Add images</string>
    <string name="same_day_booking">Same day Booking</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="save_request_information">Save Request Information</string>
    <string name="confirmation">Confirmation</string>
    <string name="message_confirm">Please confirm your quote request of $40 for business name.All payment will be collected by vendor.</string>
    <string name="confirm">Confirm</string>
    <string name="ok">Ok</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="late_arrival">Late Arrival</string>
    <string name="submit">Submit</string>
    <string name="vendor_behaviour">Vendor Behaviour</string>
    <string name="other">Other</string>
    <string name="not_now">Not Now</string>
    <string name="pending">Pending</string>
    <string name="estimated_arrival">Estimated Arrival</string>
    <string name="estimated_time">February 25th, 5 PM at 156 Sutter Street</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="logout">Logout</string>
    <string name="google_api_key">AIzaSyBO7rGsCgim2ZXjf6pS9k-OxiSx9NNoLI4</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="apply">Apply</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="refferal_code">Refferal Code</string>
    <string name="business_email">Business Email</string>
    <string name="employees">Employees</string>
    <string name="allow_same_day_booking">Allow same day booking</string>
    <string name="employee_name">Emloyee Name</string>
    <string name="employee_id">Employee Id</string>
    <string name="email_address">Email Address</string>
    <string name="add">Add</string>
    <string name="requests">Requests</string>
    <string name="history">History</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="jobs_completed">Jobs Completed</string>
    <string name="jobs_cancellations">Job Cancellations</string>
    <string name="revenue_earned">Revenue Earned</string>
    <string name="mybusiness">My Business</string>
    <string name="add_employee">Add Employee</string>
    <string name="profile">Profile</string>
    <string name="switch_customer">Switch to customer</string>
    <string name="search">Search</string>
</resources>