<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_findservices"
            android:enabled="true"
            android:checked="true"
            android:title="@string/find_services" />
        <item
            android:id="@+id/nav_requested"

            android:title="@string/requested_quotoes" />
        <item
            android:id="@+id/nav_trackservice"

            android:title="@string/track_service" />
        <item
            android:id="@+id/nav_promocode"

            android:title="@string/promo_code" />
        <item
            android:id="@+id/nav_share"

            android:title="@string/share" />
        <item
            android:id="@+id/nav_about"

            android:title="@string/about" />
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->

    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!-- -->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
